# mig

./: .gitignore  CMakeLists.txt  README.md
VisualStudio/: MinimalImageGenerator.sln  MinimalImageGenerator.vcxproj  MinimalImageGenerator.vcxproj.filters
src/MinimalImageGenerator/: MinimalImageGenerator.cpp  MinimalImageGenerator.h  TypeSafeEnum.h
src/mig/: mig.cpp  mig.h  mig_rgb.h  mig_xy.h
src/mig/shape/: mig_circle.cpp  mig_circle.h  mig_line.cpp  mig_line.h  mig_rectangle.cpp  mig_rectangle.h  mig_shape.h  mig_util.cpp  mig_util.h
